--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "serverless-python-requirements": "^6.0.0"
   }
 }
